--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
-    "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#fedfdf",
-        "activityBar.background": "#fedfdf",
-        "activityBar.foreground": "#15202b",
-        "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#06b906",
-        "activityBarBadge.foreground": "#e7e7e7",
-        "commandCenter.border": "#15202b99",
-        "sash.hoverBorder": "#fedfdf",
-        "statusBar.background": "#fcaeae",
-        "statusBar.foreground": "#15202b",
-        "statusBarItem.hoverBackground": "#fa7d7d",
-        "statusBarItem.remoteBackground": "#fcaeae",
-        "statusBarItem.remoteForeground": "#15202b",
-        "titleBar.activeBackground": "#fcaeae",
-        "titleBar.activeForeground": "#15202b",
-        "titleBar.inactiveBackground": "#fcaeae99",
-        "titleBar.inactiveForeground": "#15202b99"
-    },
-    "peacock.color": "#FCAEAE"
+  "workbench.colorCustomizations": {
+    "activityBar.activeBackground": "#1a1a1a",
+    "activityBar.background": "#1a1a1a",
+    "activityBar.foreground": "#e7e7e7",
+    "activityBar.inactiveForeground": "#e7e7e799",
+    "activityBarBadge.background": "#606020",
+    "activityBarBadge.foreground": "#e7e7e7",
+    "commandCenter.border": "#e7e7e799",
+    "sash.hoverBorder": "#1a1a1a",
+    "statusBar.background": "#000000",
+    "statusBar.foreground": "#e7e7e7",
+    "statusBarItem.hoverBackground": "#1a1a1a",
+    "statusBarItem.remoteBackground": "#000000",
+    "statusBarItem.remoteForeground": "#e7e7e7",
+    "titleBar.activeBackground": "#000000",
+    "titleBar.activeForeground": "#e7e7e7",
+    "titleBar.inactiveBackground": "#00000099",
+    "titleBar.inactiveForeground": "#e7e7e799"
+  },
+  "peacock.color": "black"
 }
