--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
   },
   "dependencies": {
     "@next/font": "^13.4.7",
+    "bootstrap": "^5.3.0",
     "next": "^13.4.9",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-bootstrap": "^2.8.0",
+    "react-dom": "18.2.0",
+    "react-responsive-carousel": "^3.2.23"
+  },
+  "devDependencies": {
+    "@types/node": "20.4.2",
+    "typescript": "5.1.6"
   }
 }
