--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
   },
   "devDependencies": {
     "@types/node": "20.4.2",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "@react-pdf/renderer": "^3.1.12",
+    "next": "^13.4.9",
+    "react": "^18.2.0",
+    "react-dom": "18.2.0",
+    "react-pdf": "^7.1.2"
   }
 }
